2008-06-17  Esteban Sanchez  <estebans@artica.es>

	* ajax.php: Added to repository. AJAX interface for Pandora. A new
	time is coming...

	* pandoradb.sql: Added id_group to treport. A report is now assigned
	to a group of agents. Changes in treport_content to add an order
	field, drop sla fields and use an enum for the type. NOTE: This will
	break all your current defined reports, update under your
	responsabillity. Added table treport_content_sla_combined to define
	SLAs in the SLA types reports.

	* godmode/reporting/graph_builder.php: Use Pandora functions. Adde
	javascript code to display the module icon when changing from the
	dropdown menu.

	* godmode/reporting/reporting_builder.php: Almost complet rewritten to
	use Pandora HTML functions. Style correction.

	* include/functions.php: Added new report types. Style correction.

	* include/functions_db.php: Use Pandora database functions to get
	simple values. Added functions get_agents_in_group(),
	get_modules_in_agent(), get_simple_alerts_in_agent(),
	get_combined_alerts_in_agent(), get_alerts_in_agent(),
	get_monitor_downs_in_period(),
	get_monitor_last_down_timestamp_in_period(),
	get_alert_fires_in_period(),
	get_alert_last_fire_timestamp_in_period(). Deleted debug output and
	fixed calling to an inexistent function in
	return_moduledata_sum_value().

	* include/functions_html.php: Tab style correction. Thanks to Ramon
	for the advice. Fixed some errors on print_table that was causing not
	to work fine if rowclass or colspan was defined.

	* include/functions_reporting.php: Adde date support to
	return_module_SLA(), event_reporting(). Added alert_reporting(),
	monitor_health_reporting(), general_group_reporting() and
	agents_detailed_reporting() to implement new report types. Style
	correction.

	* include/javascript/pandora.js: Added html_entity_decode() function
	to decode some AJAX results.

	* javascript/jquery.js: Added to repository. jQuery version 1.2.4a
